exporting xml on build

--- a/InfiniteForgePacker/InfiniteForgePacker.csproj
+++ b/InfiniteForgePacker/InfiniteForgePacker.csproj
@@ -6,6 +6,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>bin\Debug\InfiniteForgePacker.xml</DocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>bin\Release\InfiniteForgePacker.xml</DocumentationFile>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="Bond.Core.CSharp" Version="10.0.0" />
       <PackageReference Include="Bond.CSharp" Version="10.0.0" />
